opam-version: "2.0"
maintainer: "Robur Team <team@robur.coop>"
authors: [ "Robur Team <team@robur.coop>" ]
license: "MIT"
homepage: "https://github.com/robur-coop/git-kv"
dev-repo: "git+https://github.com/robur-coop/git-kv.git"
bug-reports: "https://github.com/robur-coop/git-kv/issues"
synopsis: "A Mirage_kv implementation using git"

depends: [
  "ocaml"             {>= "4.08.0"}
  "dune"              {>= "2.9.0"}
  "ke"
  "fmt"
  "lwt"
  "hxd"
  "psq"
  "bstr"
  "logs"
  "mimic"
  "emile"
  "fpath"
  "base64"
  "carton"
  "carton-git-lwt"
  "rresult"
  "astring"
  "encore"
  "digestif"
  "ptime"
  "mirage-kv"         {>= "6.0.0"}
  "mirage-ptime"
]

build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
x-maintenance-intent: [ "(latest)" ]

pin-depends: [
  [ "carton.dev" "git+https://github.com/robur-coop/carton.git#f98fa095c3ebe4b6d7e43b9cc9f620f06dd0431b" ]
  [ "carton-lwt.dev" "git+https://github.com/robur-coop/carton.git#f98fa095c3ebe4b6d7e43b9cc9f620f06dd0431b" ]
  [ "carton-git-lwt.dev" "git+https://github.com/robur-coop/carton.git#f98fa095c3ebe4b6d7e43b9cc9f620f06dd0431b" ]
]
