opam-version: "2.0"
maintainer: "Robur Team <team@robur.coop>"
authors: [ "Robur Team <team@robur.coop>" ]
license: "MIT"
homepage: "https://github.com/robur-coop/git-kv"
dev-repo: "git+https://github.com/robur-coop/git-kv"
bug-reports: "https://github.com/robur-coop/git-kv/issues"
synopsis: "A Mirage_kv implementation using git"

depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "3.0.0"}
  "ke" {>= "0.6"}
  "fmt" {>= "0.10.0"}
  "uri" {>= "4.4.0"}
  "lwt" {>= "5.9.0"}
  "hxd"
  "psq" {>= "0.2.1"}
  "bstr"
  "logs" {>= "0.7.0"}
  "mimic" {>= "0.0.6"}
  "emile" {>= "1.1"}
  "fpath" {>= "0.7.3"}
  "base64" {>= "3.5.0"}
  "carton" {>= "1.1.0"}
  "carton-git-lwt"
  "encore" {>= "0.8.1"}
  "digestif" {>= "1.3.0"}
  "ptime"
  "mirage-kv" {>= "6.0.0"}
  "cstruct" {>= "6.0.0"}
  "mirage-ptime"
  "alcotest" {with-test}
]

build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test & os != "fedora" & os != "alpine" & os != "opensuse"}
]
x-maintenance-intent: [ "(latest)" ]
