opam-version: "2.0"
maintainer: "Robur Team <team@robur.coop>"
authors: [ "Robur Team <team@robur.coop>" ]
license: "MIT"
homepage: "https://github.com/robur-coop/git-kv"
dev-repo: "git+https://github.com/robur-coop/git-kv.git"
bug-reports: "https://github.com/robur-coop/git-kv/issues"
synopsis: "A Mirage_kv implementation using git"

depends: [
  "ocaml"             {>= "4.08.0"}
  "dune"              {>= "2.9.0"}
  "git-kv"            {= version}
  "h1"
  "paf"
  "uri"
  "awa-mirage"
  "mimic"
  "tcpip"
  "mimic-happy-eyeballs"
  "happy-eyeballs-lwt"
]

build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
x-maintengnce-intent: [ "(latest)" ]
