opam-version: "2.0"
maintainer: "Robur Team <team@robur.coop>"
authors: [ "Robur Team <team@robur.coop>" ]
license: "MIT"
homepage: "https://github.com/robur-coop/git-kv"
dev-repo: "git+https://git.robur.coop/robur/git-kv.git"
bug-reports: "https://github.com/robur-coop/git-kv/issues"
synopsis: "A Mirage_kv implementation using git"

depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "3.0.0"}
  "git-kv" {= version}
  "ca-certs-nss"
  "h1"
  "paf" {>= "0.8.0"}
  "uri"
  "tls" {>= "2.0.0"}
  "tls-mirage"
  "awa-mirage" {>= "0.5.2"}
  "mimic" {>= "0.0.6"}
  "tcpip"
  "mimic-happy-eyeballs"
  "happy-eyeballs-lwt"
  "alcotest" {with-test}
]

build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs]
    {with-test & os-distribution != "fedora"
               & os-distribution != "alpine"
               & os-distribution != "opensuse"}
]
x-maintenance-intent: [ "(latest)" ]
x-ci-accept-failure: [ "alpine-3.21" "fedora-41" "fedora-42" "opensuse-15.6" "opensuse-tumbleweed" ]
