(env
 (_
  (binaries
   (../app/mgit.exe as mgit))))

(cram
 (package git-kv)
 (applies_to simple)
 (locks p9418)
 (deps %{bin:mgit}))

(cram
 (package git-kv)
 (applies_to fold)
 (locks p9418)
 (deps %{bin:mgit}))

(cram
 (package git-kv)
 (applies_to fold2)
 (locks p9418)
 (deps %{bin:mgit}))

(test
 (name tests)
 (libraries logs.fmt git-kv git-kv-net alcotest bos lwt.unix)
 (modules tests))
